--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,12 @@
 				<div class="collapse navbar-collapse" id="navbarColor01">
 					<ul class="navbar-nav me-auto">
 						<li class="nav-item">
-							<a class="nav-link active" href="{{url('admin_livres')}}">Accueil
+							<a class="nav-link" href="{{url('app_home')}}">Accueil
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{url('admin_livres')}}">Nos Livres
 								<span class="visually-hidden">(current)</span>
 							</a>
 						</li>
@@ -30,6 +35,33 @@
 
 
 					</ul>
+					<ul class="navbar-nav me-ml">
+						<li class="nav-item">
+							<a class="nav-link" href="#">Panier
+								<span class="visually-hidden">(current)</span>
+							</a>
+						</li>
+						{% if app.user %}
+							<li class="nav-item">
+								<a class="nav-link" href="{{url('app_logout')}}">Déconnexion</a>
+							</li>
+						{% else %}
+
+							<li class="nav-item">
+								<a class="nav-link" href="{{url('app_register')}}">S'inscrire
+									<span class="visually-hidden">(current)</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link " href="{{url('app_login')}}">Connexion
+									<span class="visually-hidden">(current)</span>
+								</a>
+							</li>
+
+
+						{% endif %}
+					</ul>
+
 
 				</div>
 			</div>
