--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,19 +4,216 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Bienvenue sur le site de vente de livre SymBook</h1>
-	Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quam eos architecto earum, deleniti exercitationem id quidem odit, iure, doloribus repudiandae rem corrupti explicabo sapiente amet. Impedit, quisquam? Odit, inventore?
-	Expedita ab vel tempora veritatis odio exercitationem dolorem molestiae corrupti ipsa unde alias eius et nisi nihil perferendis aut suscipit ratione sequi nostrum numquam, repellendus ipsam tempore cumque molestias. Cupiditate.
-	Quos doloribus possimus molestias consequatur libero saepe ipsum placeat vitae ratione ut, quaerat perferendis, reprehenderit, neque amet omnis in iure. Eius fugiat dolorem sequi explicabo rem ducimus veritatis officia consectetur!
-	Hic aliquam doloremque quod quibusdam, quidem eius cupiditate consequatur dicta, ipsa obcaecati numquam sint, nulla est atque omnis ipsam assumenda architecto magnam fugiat rerum inventore impedit deserunt? Aliquid, rerum hic!
-	Ex delectus enim, cumque vitae odio quisquam a quos quae sapiente eum omnis voluptates sunt, ad neque dolor laboriosam earum itaque id! Reprehenderit veritatis a ipsum esse voluptates eligendi aut.
-	Laboriosam molestiae iusto quisquam numquam repellat ducimus nobis corrupti non, quaerat ex deleniti esse a obcaecati magni alias praesentium dolor accusantium reprehenderit ab culpa, necessitatibus laborum. Rem modi eveniet illum.
-	Ipsam quas veritatis, culpa totam, iusto voluptas impedit atque dolore quam voluptates suscipit provident? Sequi ut, sapiente animi quasi a facere laudantium rerum nisi labore facilis excepturi dignissimos, cumque ipsam!
-	Neque deleniti vitae temporibus sequi fugiat dolorum eum aspernatur, provident dolore natus, soluta laborum nostrum molestiae perspiciatis enim ipsa, dolorem ea laudantium. Quasi iste culpa laborum nostrum omnis maiores ab?
-	Quisquam possimus quo id voluptates dolore corporis, perferendis optio, accusantium molestias incidunt veniam dignissimos impedit atque minus laborum quasi? Sed recusandae placeat cum repudiandae odit odio minus incidunt fugit hic.
-	Quae nobis ut alias id asperiores excepturi, ipsam exercitationem omnis accusantium quidem placeat aliquam, unde ipsum adipisci. Eius maxime magnam necessitatibus eveniet rerum. Unde vitae maxime temporibus, doloribus expedita ea?
-	Corrupti itaque non tempora, nobis commodi velit hic dolore beatae eaque vel eum, quos maiores dolores similique consequatur autem vitae ratione? Quas est minus numquam! Praesentium iure veritatis modi libero!
-	Eveniet tempora sit minima repellat debitis facere eum veritatis architecto eos deserunt ducimus sequi ipsa asperiores molestiae commodi, odit perspiciatis cupiditate temporibus voluptates, voluptatem alias accusantium labore. Tempora, similique molestias.
-	Incidunt debitis fugiat facilis neque eveniet eaque iste ab reprehenderit consequatur tempora dicta, recusandae delectus beatae optio sapiente excepturi hic tenetur dolores ad, atque illum quis officia laborum sequi. Dolor.
-	Mollitia, earum natus. Nemo corporis explicabo esse ullam obcaecati. Esse enim maxime quae, inventore minus, laborum eligendi, possimus rem molestias consequuntur ad. Voluptatem, eligendi? Natus laborum eum non repellendus deserunt!
+    <!-- Header -->
+    <header class="py-5 bg-info text-white">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center">
+                <h1 class="display-4 fw-bolder">SymBook</h1>
+                <p class="lead fw-normal text-white-50 mb-0">Shop your favorite books</p>
+            </div>
+        </div>
+    </header>
+    <!-- the New 8 books-->
+    <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <!-- Product price-->
+                                    $40.00 - $80.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Special Item</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">$20.00</span>
+                                    $18.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Sale Item</h5>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">$50.00</span>
+                                    $25.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Popular Item</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    $40.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Sale Item</h5>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">$50.00</span>
+                                    $25.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Fancy Product</h5>
+                                    <!-- Product price-->
+                                    $120.00 - $280.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Sale badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Special Item</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    <span class="text-muted text-decoration-line-through">$20.00</span>
+                                    $18.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">Popular Item</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                        <div class="bi-star-fill"></div>
+                                    </div>
+                                    <!-- Product price-->
+                                    $40.00
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 {% endblock %}
