--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,22 +41,17 @@
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#">Gestion catégories</a>
+									<a class="nav-link"  href="{{url('admin_categorie')}}">Gestion catégories</a>
 								</li>
 							{% endif %}
 						{% endif %}
 					</ul>
 					
 					<ul class="navbar-nav me-ml">
-						{# <li class="nav-item">
-							<a class="nav-link" href="#">Panier
-								<span class="visually-hidden">(current)</span>
-							</a>
-						</li> #}
 						<form class="d-flex">
 							<button class="btn btn-outline-dark" type="submit">
 								<i class="bi-cart-fill me-1"></i>
-								Panier
+								<i class="fa-solid fa-cart-shopping"></i> Panier
 								<span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
 							</button>
 						</form>
