Add Reset Password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,4 +30,5 @@
         <a href="{{ path('app_register') }}" class="btn btn-lg btn-secondary mt-3">Sign up</a>
     </div>
 </form>
+<p class="text-center">Forgot your password? <a href="{{ path('app_forgot_password_request') }}">Reset it</a></p>
 {% endblock %}
