chore: Update doctrine/doctrine-fixtures-bundle to version 3.6

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,59 +4,105 @@
 {% endblock %}
 
 {% block body %}
-    <!-- Header -->
-    <header class="py-5 bg-info text-white">
-        <div class="container px-4 px-lg-5 my-5">
-            <div class="text-center">
-                <h1 class="display-4 fw-bolder">SymBook</h1>
-                <p class="lead fw-normal text-white-50 mb-0">Shop your favorite books</p>
-            </div>
-        </div>
-    </header>
-    <!-- the New 8 books-->
-    <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-3 justify-content-center">
-                    {% for livre in livres %}
-                        <div class="col mb-5">
-                            <div class="card h-100">
-                                <!-- Product image-->
-                                <img class="card-img-top" src={{livre.image}} alt="..." />
-                                <!-- Product details-->
-                                <div class="card-body p-4">
-                                    <div class="text-center">
-                                        <!-- Product name-->
-                                        <h5 class="fw-bolder">{{livre.titre}}</h5>
-                                        <!-- Product reviews-->
-                                        <div class="d-flex justify-content-center small text-warning mb-2">
-                                            {% set note = random(6)%}
-                                            {% for i in range(1, 6) %}
-                                                {% if i <=  note %}
-                                                    <i class="fa-solid fa-star"></i>
-                                                {% else %}
-                                                    <i class="fa-regular fa-star"></i>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </div>
-                                        <!-- Product price-->
-                                        <span class="text-muted text-decoration-line-through">20.00 TND</span>
-                                        {{livre.prix}} TND
-                                    </div>
-                                </div>
-                                <!-- Product actions-->
-                                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center">
-                                        <a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                {# more #}
-                <div class="text-end ">
-                    <a class="btn btn-outline-primary mt-auto" href="{{url('app_livres')}}">More</a>
-                </div>
+    {# List des livres #}
+        <section>
+        <section>
+            <div class="d-flex justify-content-between container py-3 gap-3">
+                <div><button class="btn btn-success me-1" type="button"><i class="fas fa-sort" style="font-size: 17px;"></i></button><button class="btn btn-info" type="button" data-bs-toggle="offcanvas" data-bs-target="#filter-canvas" aria-controls="filter-canvas"><i class="fas fa-filter me-2"></i>Filtrer</button></div>
+                <form class="d-flex gap-1"><input class="form-control" type="text" placeholder="Rechercher par titre" name="search"><input class="btn btn-primary" type="submit" value="Chercher"></form>
             </div>
         </section>
+        <section class="mt-3 container-fluid">
+            {# Product List #}
+            <div class="row d-flex justify-content-between mx-3">
+                {# Product  #}
+                {% for livre in livres %}
+                <div class="card col-6 my-3 col-md-4 col-lg-3 w-md-25" style="max-width: 300px;">
+                    <div class="card-header p-1">
+                        <img alt="white book on black textile" class="w-100" src={{livre.image}}>
+                    </div>
+                    <div class="card-body">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <h4>{{livre.titre}}</h4>
+                            <h4 class="text-success border rounded-5 px-2 py-1 border-success">{{livre.prix}}DT</h4>
+                        </div>
+                        <h6 class="text-muted card-subtitle mb-2">{{livre.auteur}}</h6>
+                        <p class="card-text">
+                            {{livre.resume}}
+                        </p>
+                        <div class="d-flex justify-content-between gap-3">
+                            <button class="btn btn-success w-50" type="button">Ajouter Panier</button>
+                            <button class="btn btn-primary w-50" type="button">consulter</button>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+
+                {% if livres|length == 0 %}
+                    <div class="alert alert-warning" role="alert">
+                        Aucun livre trouvé
+                    </div>
+                {% endif %}
+                {# End Product #}
+            </div>
+            {# End Product List #}
+        </section>
+        {# End List des livres #}
+        {# Pagination #}
+        <section class="container d-flex justify-content-center my-3">
+            <nav>
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" aria-label="Previous" href="#"><span aria-hidden="true">«</span></a></li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link" aria-label="Next" href="#"><span aria-hidden="true">»</span></a></li>
+                </ul>
+            </nav>
+        </section>
+        {# End Pagination #}
+    </section>
+    {# Offcanvas Filter #}
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="filter-canvas">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title">Filter</h5>
+            <button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <p>Parcours et recherche de livres par titre, auteur et catégorie...</p>
+            <div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text">Titre</span>
+                    <input class="form-control" type="text">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text">Auteur</span>
+                    <input class="form-control" type="text">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text">catégorie</span>
+                    <select class="form-select">
+                        <optgroup label="catégorie">
+                            <option value="">all</option>
+                            {% for categorie in categories %}
+                                <option value="{{categorie.id}}">{{categorie.libelle}}</option>
+                            {% endfor %}
+                        </optgroup>
+                    </select>
+                </div>
+                <div class="input-group">
+                    <span class="input-group-text">Prix</span>
+                    <input class="form-control" type="number" placeholder="Minimum" name="min_price">
+                    <input class="form-control" type="number" placeholder="Maximum" name="max_price">
+                </div>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-end gap-3">
+                <button class="btn btn-primary" type="button" data-bs-dismiss="offcanvas">Close</button>
+                <button class="btn btn-success" type="button" data-bs-dismiss="offcanvas">Filtrer</button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
