--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,87 +5,68 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}
+				Welcome to SymBook
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"> {% block stylesheets %}{% endblock %}
-		<link rel="stylesheet" href="{{asset('bootstrap.css')}}">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/sketchy/bootstrap.min.css">
+    	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Neucha|Cabin+Sketch&amp;display=swap">
+    	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    	<link rel="stylesheet" href="assets/css/Login-Form-Basic-icons.css">
+
 	</head>
 	<body>
-
-		<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">SymBook</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarColor01">
-					<ul class="navbar-nav me-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="{{url('app_home')}}">Accueil
-								<span class="visually-hidden">(current)</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{url('app_livres')}}">Nos Livres
-								<span class="visually-hidden">(current)</span>
-							</a>
-						</li>
-
-						{%if app.user %}
-							{% if app.user.roles[0] == "ROLE_ADMIN" %}
-								<li class="nav-item">
-									<a class="nav-link" href="{{url('admin_livres')}}">Gestion Livres
-										<span class="visually-hidden">(current)</span>
-									</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link"  href="{{url('admin_categorie')}}">Gestion catégories</a>
-								</li>
-							{% endif %}
-						{% endif %}
-					</ul>
-					
-					<ul class="navbar-nav me-ml">
-						<form class="d-flex">
-							<button class="btn btn-outline-dark" type="submit">
-								<i class="bi-cart-fill me-1"></i>
-								<i class="fa-solid fa-cart-shopping"></i> Panier
-								<span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-							</button>
-						</form>
-						{% if app.user %}
-							<li class="nav-item">
-								<a class="nav-link" href="{{url('app_logout')}}"><i class="fa-solid fa-door-open"></i> Déconnexion</a>
-							</li>
-						{% else %}
-
-							<li class="nav-item">
-								<a class="nav-link " href="{{url('app_login')}}"><i class="fa-solid fa-right-to-bracket"></i> Connexion
-									<span class="visually-hidden">(current)</span>
-								</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{{url('app_register')}}"><i class="fa-solid fa-user"></i> S'inscrire
-									<span class="visually-hidden">(current)</span>
-								</a>
-							</li>
-
-
-						{% endif %}
-					</ul>
-
-
-				</div>
+		{# NavBar #}
+		<section class="mb-3">
+			<div class="bg-dark py-2 d-flex justify-content-end px-5">
+				<div class="d-flex gap-3">
+				<a class="btn btn btn-outline-light rounded-2 py-1 px-3 fs-6 text-capitalize" type="button" href="{{ path('app_register') }}">Inscrire</a>
+				<a class="btn btn btn-outline-light rounded-2 py-1 px-3 fs-6 text-capitalize" type="button" href="{{ path('app_login') }}">Connecter</a></div>
 			</div>
-		</nav>
+			<nav class="navbar bg-body px-5 bg-primary shadow">
+				<div class="container-fluid">
+					<a class="navbar-brand fs-3 fw-bold text-primary" href="#">SymBook</a>
+					<button class="btn rounded-5 px-3 bg-success btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#cart-canvas" aria-controls="cart-canvas">
+					<span class="badge bg-primary rounded me-2">0</span><i class="fas fa-shopping-cart me-2"></i>0.000 DT</button>
+				</div>
+			</nav>
+		</section>
+		{# Cart offcanvas #}
+		<div class="offcanvas offcanvas-end" tabindex="-1" id="cart-canvas">
+			<div class="offcanvas-header">
+				<h5 class="offcanvas-title">Votre Panier</h5><button class="btn-close" type="button" aria-label="Close" data-bs-dismiss="offcanvas"></button>
+			</div>
+			{# Les Liste des produit #}
+			<div class="offcanvas-body">
+				{# product card #}
+				<div class="card mb-3">
+					<div class="card-body">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-5"><img alt="white book on black textile" class="img-thumbnail w-100" src="../assets/img/photo-1586974722828-4a75a60c57b2.jpg"></div>
+								<div class="col-md-7">
+									<h4>Titre de Livre</h4>
+									<h6 class="text-muted mb-2">Lewis Hamilton</h6>
+									<div class="input-group"><button class="btn btn-primary" type="button"><i class="fas fa-caret-up"></i></button><input class="form-control text-center number-without-arrows" type="number" inputmode="numeric" value="0" min="0" step="1"><button class="btn btn-primary" type="button"><i class="fas fa-caret-down" style="font-size: 17px;"></i></button></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				{# End product card #}
+			</div>
+			<hr>
+			<h5 class="text-end mx-3">0,000 TD</h5>
+			<div class="d-flex justify-content-center mb-3"><button class="btn btn-success" type="button">Passer votre commande</button></div>
+		</div>
 		{# Page content #}
 		<div class=""> {% block body %}{% endblock %}</div>
 		{# Footer #}
-		<footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; SymBook {{Date | date('Y')}}
-			</p></div>
-        </footer>
-		</body>
-	</html>
+		<footer class="text-center bg-dark mt-3">
+			<div class="container text-white py-4 py-lg-5">
+				<p class="text-white mb-0">Copyright © {{Date | date('Y')}} SymBook</p>
+			</div>
+		</footer>
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+	</body>
+</html>
